# spammer_bot

./: .gitignore  Cargo.toml  LICENSE  README.md  cli.yaml
src/: lib.rs  main.rs  parse.rs  spam.rs
