[package]
name = "spammer_bot"
version = "0.2.0"
authors = ["strikef <kuguakrguakr@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "3.0.0-beta.4", features = ["yaml"] }
serenity = { version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread", "time"] }
